# chess

./: .gitignore  README.md  meson.build  xmake.lua
src/: chess.cpp  chess.hpp  data.cpp  main.cpp
src/chess/: board.hpp  chess.hpp  piece.hpp
src/game/: board.cpp  chess.cpp
